deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrastore
  namespace: infrastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infrastore
  template:
    metadata:
      labels:
        app: infrastore
    spec:
      containers:
      - name: infrastore
        image: saheerbabu/infrastore:latest
        ports:
        - containerPort: 8000
