service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infrastore-service
spec:
  selector:
    app: infrastore
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
