networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: infrastore-network-policy
  namespace: infrastore
spec:
  podSelector:
    matchLabels:
      app: infrastore
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx # only allow traffic from the ingress-nginx namespace
    ports:
    - protocol: TCP
      port: 8000  #port the app listens on
